# nucleotide

./: .cargo-deny.toml  .envrc  .gitignore  AGENTS.md  ATTRIBUTION.md  AppIcon.icns  BUFFERLINE_FEATURE.md  BUILD_OPTIMIZATION.md  CIRCULAR_DEPENDENCIES.md  CIRCULAR_DEPENDENCIES_RESOLVED.md  CLAUDE.md  Cargo.toml  DEPENDENCY_HIERARCHY.md  EVENT_SYSTEM.md  EXTRACTION_SUMMARY.md  FURTHER_REFACTORING.md  HELIX_EVENT_INTEGRATION_ANALYSIS.md  IMPROVEMENTS.md  KNOWN_ISSUES.md  LAYERED_ARCHITECTURE.md  MIGRATION.md  NIX_BUILD.md  NIX_SETUP.md  ORACLE_PATTERNS_APPLIED.md  README-Bundle.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_COMPLETE_SUMMARY.md  THEME_MAPPING.md  arch_plan.md  bufferline_config_example.toml  build-with-nix.sh  bundle-mac.sh  colours.md  completions_plan.md  completions_todos.md  convert_icon.py  create_iconset.sh  deny.toml  event_system_improvements.md  (+26 more)
crates/nucleotide/: Cargo.toml  build.rs  nucleotide.example.toml
crates/nucleotide-appearance/: Cargo.toml
crates/nucleotide-appearance/src/: lib.rs
crates/nucleotide-core/: Cargo.toml  README.md
crates/nucleotide-core/src/: app_event.rs  capabilities.rs  command_system.rs  core_event.rs  document_manager.rs  editor_capabilities.rs  event_aggregator.rs  event_bridge.rs  events.rs  gpui_to_helix_bridge.rs  lib.rs  picker_capability.rs  preview_tracker.rs  shared_types.rs  snippets.rs  utils.rs
crates/nucleotide-editor/: Cargo.toml  README.md
crates/nucleotide-editor/benches/: line_layout_cache.rs  scrolling_performance.rs
crates/nucleotide-editor/src/: cursor.rs  cursor_style.rs  diagnostics.rs  document_element.rs  document_frame.rs  document_frame_painter.rs  document_metrics.rs  document_renderer.rs  editor_view.rs  geometry.rs  gutter.rs  highlight.rs  hit_test.rs  inline_diagnostics.rs  lib.rs  line_cache.rs  line_painter.rs  line_plan.rs  line_text.rs  metrics.rs  overlay_state.rs  render_snapshot.rs  ruler.rs  run_gutter.rs  scroll_manager.rs  scroll_state.rs  scrollbar.rs  selection.rs  soft_wrap.rs  style.rs  surface.rs  view_component.rs  view_state.rs  viewport.rs
crates/nucleotide-env/: Cargo.toml  README.md
crates/nucleotide-env/src/: lib.rs  shell_env.rs  shell_env_focused_test.rs  wsl.rs
crates/nucleotide-events/: Cargo.toml  README.md
crates/nucleotide-events/src/: app_event.rs  bridge.rs  completion.rs  completion_events.rs  core_events.rs  diagnostics.rs  document.rs  editor.rs  event_bus.rs  handler.rs  integration.rs  lib.rs  lsp.rs  lsp_events.rs  run.rs  terminal.rs  ui.rs  ui_events.rs  vcs.rs  view.rs  workspace.rs  workspace_events.rs
crates/nucleotide-logging/: Cargo.toml  README.md
crates/nucleotide-logging/src/: config.rs  instrumentation_tests.rs  integration_test.rs  layers.rs  level_filtering_tests.rs  lib.rs  performance.rs  reload.rs  simple_mock_tests.rs  structured_tests.rs  subscriber.rs
crates/nucleotide-lsp/: Cargo.toml  README.md
crates/nucleotide-lsp-proxy/: Cargo.toml  README.md
crates/nucleotide-lsp-proxy/src/: main.rs
crates/nucleotide-lsp/src/: TESTING.md  command_flow_test.rs  coordination_manager.rs  extensions.rs  helix_lsp_bridge.rs  integration_tests.rs  lib.rs  lsp_completion_trigger.rs  lsp_manager.rs  lsp_state.rs  lsp_status.rs  mock_server_tests.rs  project_lsp_manager.rs  stress_tests.rs
crates/nucleotide-process/: Cargo.toml
crates/nucleotide-process/src/: lib.rs
crates/nucleotide-project/: Cargo.toml  README.md
crates/nucleotide-project/src/: error.rs  lib.rs  manifest.rs  project_indicator.rs  project_status_service.rs  registry.rs  utils.rs
crates/nucleotide-remote/: Cargo.toml
crates/nucleotide-remote/src/: backend.rs  cli.rs  command.rs  connection.rs  lib.rs  main.rs  protocol_v5.rs  proxy.rs  reconnect.rs  rpc.rs  v5_budget.rs
crates/nucleotide-remote/tests/: v5_external_fixtures.rs  v5_loopback_fixtures.rs
crates/nucleotide-terminal/: Cargo.toml
crates/nucleotide-terminal-panel/: Cargo.toml
crates/nucleotide-terminal-panel/src/: lib.rs
crates/nucleotide-terminal-view/: Cargo.toml
crates/nucleotide-terminal-view/src/: lib.rs
crates/nucleotide-terminal/src/: lib.rs
crates/nucleotide-test-lsp/: Cargo.toml  README.md
crates/nucleotide-test-lsp/src/: completion_engine.rs  config.rs  main.rs  protocol.rs  test_scenarios.rs
crates/nucleotide-types/: Cargo.toml  README.md
crates/nucleotide-types/src/: completion.rs  config.rs  editor_types.rs  font_config.rs  lib.rs  project_config.rs  scrollbar.rs  vcs.rs
crates/nucleotide-ui/: Cargo.toml
crates/nucleotide-ui/src/: about_window.rs  actions.rs  assets.rs  button.rs  button_tests.rs  checkbox.rs  common.rs  completion.rs  completion_cache.rs  completion_docs.rs  completion_error.rs  completion_icons.rs  completion_keyboard.rs  completion_perf.rs  completion_popup.rs  completion_renderer.rs  completion_v2.rs  component_gallery.rs  confirm_dialog.rs  context_menu.rs  debouncer.rs  file_icon.rs  focus.rs  focus_indicator.rs  fuzzy.rs  global_input.rs  info_box.rs  initialization_tests.rs  input.rs  integration_tests.rs  key_hint_view.rs  keyboard_navigation.rs  layout.rs  lib.rs  list_item.rs  markdown.rs  modal_layer.rs  navigable.rs  notification.rs  overlay.rs  (+23 more)
crates/nucleotide-vcs/: Cargo.toml  README.md
crates/nucleotide-vcs/src/: lib.rs  vcs_service.rs
crates/nucleotide-workspace/: Cargo.toml  README.md
crates/nucleotide-workspace/src/: layout.rs  lib.rs  tab_manager.rs  workspace_manager.rs
crates/nucleotide/assets/: nucleotide.icns
crates/nucleotide/src/: actions.rs  application.rs  application.rs.bak2  cli.rs  completion.rs  completion_coordinator.rs  completion_interception.rs  completions.rs  config.rs  diagnostics_panel.rs  document.rs  editor_capabilities_impl.rs  editor_provider.rs  editor_view.rs  event_bridge.rs  gpui_to_helix_bridge.rs  grammar_tool.rs  helix_command.rs  info_box.rs  input_coordinator.rs  integration_test_phase2.rs  key_hint_view.rs  lib.rs  lsp_manager.rs  lsp_status.rs  lsp_traffic_logger.rs  main.rs  overlay.rs  picker.rs  picker_capability.rs  picker_delegate.rs  picker_view.rs  prompt.rs  (+25 more)
(+261 files in other folders)
