[workspace]
members = [
    "crates/nucleotide-types",
    "crates/nucleotide-events",
    "crates/nucleotide-logging",
    "crates/nucleotide-core",
    "crates/nucleotide-editor",
    "crates/nucleotide-ui",
    "crates/nucleotide-lsp",
    "crates/nucleotide-project",
    "crates/nucleotide-env",
    "crates/nucleotide-vcs",
    "crates/nucleotide-lsp-proxy",
    "crates/nucleotide",
    "crates/nucleotide-terminal",
    "crates/nucleotide-terminal-view",
    "crates/nucleotide-terminal-panel",
]
exclude = [
    "vendor/block-0.1.6",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["The Nucleotide Contributors"]
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/iainh/nucleotide"
homepage = "https://github.com/iainh/nucleotide"

[workspace.dependencies]
# GPUI and GPUI-adjacent dependencies. These track git sources so Cargo
# can pull GPUI fixes and keep direct/transitive GPUI types unified.
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui", features = ["test-support"] }
gpui_tokio = { git = "https://github.com/zed-industries/zed", package = "gpui_tokio" }
gpui_platform = { git = "https://github.com/zed-industries/zed", package = "gpui_platform", features = ["font-kit", "runtime_shaders", "wayland", "x11"] }

# Helix dependencies - pinned to specific commit for reproducible builds
# To update: git ls-remote https://github.com/iainh/helix refs/heads/nucleotide-lsp-integration
helix-core = { git = "https://github.com/iainh/helix", rev = "cd2ee5a29e7309e69af5cd5529e3bef1759bdbd4" }
helix-event = { git = "https://github.com/iainh/helix", rev = "cd2ee5a29e7309e69af5cd5529e3bef1759bdbd4" }
helix-loader = { git = "https://github.com/iainh/helix", rev = "cd2ee5a29e7309e69af5cd5529e3bef1759bdbd4" }
helix-lsp = { git = "https://github.com/iainh/helix", rev = "cd2ee5a29e7309e69af5cd5529e3bef1759bdbd4" }
helix-term = { git = "https://github.com/iainh/helix", rev = "cd2ee5a29e7309e69af5cd5529e3bef1759bdbd4" }
helix-tui = { git = "https://github.com/iainh/helix", rev = "cd2ee5a29e7309e69af5cd5529e3bef1759bdbd4" }
helix-view = { git = "https://github.com/iainh/helix", rev = "cd2ee5a29e7309e69af5cd5529e3bef1759bdbd4" }
helix-vcs = { git = "https://github.com/iainh/helix", rev = "cd2ee5a29e7309e69af5cd5529e3bef1759bdbd4" }
helix-parsec = { git = "https://github.com/iainh/helix", rev = "cd2ee5a29e7309e69af5cd5529e3bef1759bdbd4" }
helix-stdx = { git = "https://github.com/iainh/helix", rev = "cd2ee5a29e7309e69af5cd5529e3bef1759bdbd4" }

# Common dependencies
tokio = { version = "1.32", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
env_logger = "0.11"
arc-swap = "1.7"
bitflags = "2.9"
notify = { version = "6.1", default-features = false, features = ["macos_fsevent"] }
which = "8.0"
regex = "1.10"
libc = "0.2"
chardetng = "0.1"
ignore = "0.4"
once_cell = "1.19"
nucleo = "0.5"
parking_lot = "0.12"
unicode-segmentation = "1.11"
url = "2.5"
tempfile = "3.10"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
smallvec = "1.13"
ctor = "0.2"
tokio-stream = "0.1"
rust-embed = "8.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
dirs = "5.0"
thiserror = "1.0"
async-trait = "0.1"
rand = "0.8"
slotmap = "1.0"
pulldown-cmark = { version = "0.13", default-features = false }

# LSP protocol dependencies
lsp-types = "0.97"
lsp-server = "0.7"

# macOS framework bindings
objc2 = "0.6"
objc2-foundation = "0.3" 
objc2-app-kit = "0.3"

# Inter-crate dependencies
nucleotide-types = { path = "crates/nucleotide-types" }
nucleotide-events = { path = "crates/nucleotide-events" }
nucleotide-logging = { path = "crates/nucleotide-logging" }
nucleotide-core = { path = "crates/nucleotide-core" }
nucleotide-editor = { path = "crates/nucleotide-editor" }
nucleotide-ui = { path = "crates/nucleotide-ui" }
nucleotide-lsp = { path = "crates/nucleotide-lsp" }
nucleotide-project = { path = "crates/nucleotide-project" }
nucleotide-env = { path = "crates/nucleotide-env" }
nucleotide-vcs = { path = "crates/nucleotide-vcs" }

[patch."https://github.com/iainh/helix"]
helix-lsp = { path = "vendor/helix-lsp" }

[patch.crates-io]
# Zed workspace crates rely on these patched async primitives. Patches in
# dependency workspaces are ignored by Cargo, so mirror the required entries here.
async-process = { git = "https://github.com/zed-industries/async-process.git", rev = "0b6d6713570af61806e1e5cb40e0f757cb93fd9d" }
async-task = { git = "https://github.com/smol-rs/async-task.git", rev = "b4486cd71e4e94fbda54ce6302444de14f4d190e" }
# `block` has no newer crates.io release and v0.1.6 trips Rust's
# `uninhabited_static` future-incompat lint. Keep the package/version stable
# for GPUI's transitive macOS dependencies while patching the marker type.
block = { path = "vendor/block-0.1.6" }

[profile.dev]
opt-level = 1
debug = "line-tables-only"  # Faster builds with minimal debug info
split-debuginfo = "unpacked"  # Faster linking on macOS
incremental = true

[profile.release]
opt-level = 3
lto = "thin"  # Much faster linking than "true", slightly larger binary
codegen-units = 1
strip = "debuginfo"
split-debuginfo = "packed"  # Faster linking on macOS
incremental = false  # Disable for release builds for maximum optimization
