[workspace]
members = [
    "crates/nucleotide-types",
    "crates/nucleotide-events",
    "crates/nucleotide-logging",
    "crates/nucleotide-appearance",
    "crates/nucleotide-core",
    "crates/nucleotide-editor",
    "crates/nucleotide-ui",
    "crates/nucleotide-lsp",
    "crates/nucleotide-project",
    "crates/nucleotide-env",
    "crates/nucleotide-process",
    "crates/nucleotide-workspace",
    "crates/nucleotide-remote",
    "crates/nucleotide-vcs",
    "crates/nucleotide-lsp-proxy",
    "crates/nucleotide",
    "crates/nucleotide-terminal",
    "crates/nucleotide-terminal-view",
    "crates/nucleotide-terminal-panel",
    "vendor/helix-stdx",
    "vendor/helix-view",
]
exclude = [
    "vendor/block-0.1.6",
    "vendor/zed",
]
resolver = "2"

[workspace.package]
version = "0.5.0"
authors = ["The Nucleotide Contributors"]
edition = "2024"
rust-version = "1.95"
license = "MPL-2.0"
repository = "https://github.com/iainh/nucleotide"
homepage = "https://github.com/iainh/nucleotide"

[workspace.dependencies]
# GPUI and GPUI-adjacent dependencies. These are vendored from the pinned Zed
# revision in `vendor/zed` so local platform fixes can be reviewed and upstreamed.
gpui = { path = "vendor/zed/crates/gpui", package = "gpui", features = ["test-support"] }
gpui_platform = { path = "vendor/zed/crates/gpui_platform", package = "gpui_platform", features = ["font-kit", "wayland", "x11"] }

# Helix dependencies - pinned to the upstream base revision that our vendored
# Nucleotide-specific patches are replayed against.
helix-core = { git = "https://github.com/helix-editor/helix", rev = "14d6bc0febed9c692048271a8ae2362ac969c6e0" }
helix-dap = { git = "https://github.com/helix-editor/helix", rev = "14d6bc0febed9c692048271a8ae2362ac969c6e0" }
helix-event = { git = "https://github.com/helix-editor/helix", rev = "14d6bc0febed9c692048271a8ae2362ac969c6e0" }
helix-loader = { git = "https://github.com/helix-editor/helix", rev = "14d6bc0febed9c692048271a8ae2362ac969c6e0" }
helix-lsp = { git = "https://github.com/helix-editor/helix", rev = "14d6bc0febed9c692048271a8ae2362ac969c6e0" }
helix-term = { git = "https://github.com/helix-editor/helix", rev = "14d6bc0febed9c692048271a8ae2362ac969c6e0" }
helix-tui = { git = "https://github.com/helix-editor/helix", rev = "14d6bc0febed9c692048271a8ae2362ac969c6e0" }
helix-view = { git = "https://github.com/helix-editor/helix", rev = "14d6bc0febed9c692048271a8ae2362ac969c6e0" }
helix-vcs = { git = "https://github.com/helix-editor/helix", rev = "14d6bc0febed9c692048271a8ae2362ac969c6e0" }
helix-stdx = { git = "https://github.com/helix-editor/helix", rev = "14d6bc0febed9c692048271a8ae2362ac969c6e0" }

# Common dependencies
tokio = { version = "1.32", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
arc-swap = "1.7"
notify = { version = "6.1", default-features = false, features = ["macos_fsevent"] }
which = "8.0"
regex = "1.10"
ignore = "0.4"
globset = "0.4"
indexmap = "2"
once_cell = "1.19"
nucleo = "0.5"
parking_lot = "0.12"
prost = "0.14"
url = "2.5"
tempfile = "3.10"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
smallvec = "1.13"
ctor = "1.0"
rust-embed = { version = "8.5", features = ["include-exclude"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
dirs = "6.0"
thiserror = "2.0"
async-trait = "0.1"
rand = "0.10"
slotmap = "1.0"
pulldown-cmark = { version = "0.13", default-features = false }
zstd = { version = "0.13", default-features = false }
velopack = "1.2.0"

# macOS framework bindings
objc2 = "0.6"
objc2-foundation = "0.3" 
objc2-app-kit = "0.3"

# Inter-crate dependencies
nucleotide-types = { path = "crates/nucleotide-types" }
nucleotide-events = { path = "crates/nucleotide-events" }
nucleotide-logging = { path = "crates/nucleotide-logging" }
nucleotide-appearance = { path = "crates/nucleotide-appearance" }
nucleotide-core = { path = "crates/nucleotide-core" }
nucleotide-editor = { path = "crates/nucleotide-editor" }
nucleotide-ui = { path = "crates/nucleotide-ui" }
nucleotide-lsp = { path = "crates/nucleotide-lsp" }
nucleotide-project = { path = "crates/nucleotide-project" }
nucleotide-env = { path = "crates/nucleotide-env" }
nucleotide-process = { path = "crates/nucleotide-process" }
nucleotide-workspace = { path = "crates/nucleotide-workspace" }
nucleotide-remote = { path = "crates/nucleotide-remote" }
nucleotide-vcs = { path = "crates/nucleotide-vcs" }

[patch."https://github.com/helix-editor/helix"]
helix-lsp = { path = "vendor/helix-lsp" }
helix-lsp-types = { path = "vendor/helix-lsp-types" }
helix-stdx = { path = "vendor/helix-stdx" }
helix-view = { path = "vendor/helix-view" }

[patch.crates-io]
# Zed workspace crates rely on these patched async primitives. Patches in
# dependency workspaces are ignored by Cargo, so mirror the required entries here.
async-process = { git = "https://github.com/zed-industries/async-process.git", rev = "0b6d6713570af61806e1e5cb40e0f757cb93fd9d" }
async-task = { git = "https://github.com/smol-rs/async-task.git", rev = "b4486cd71e4e94fbda54ce6302444de14f4d190e" }
# `block` has no newer crates.io release and v0.1.6 trips Rust's
# `uninhabited_static` future-incompat lint. Keep the package/version stable
# for GPUI's transitive macOS dependencies while patching the marker type.
block = { path = "vendor/block-0.1.6" }

[profile.dev]
opt-level = 1
debug = "line-tables-only"  # Faster builds with minimal debug info
split-debuginfo = "unpacked"  # Faster linking on macOS
incremental = true

[profile.release]
opt-level = 3
lto = "thin"  # Much faster linking than "true", slightly larger binary
codegen-units = 1
strip = "debuginfo"
split-debuginfo = "packed"  # Faster linking on macOS
incremental = false  # Disable for release builds for maximum optimization
