[package]
name = "nucleotide-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false
description = "Core event bridges and capabilities for Nucleotide editor (Layer 3)"
categories = ["text-editors", "gui"]
rust-version = "1.88"

[dependencies]
# Lower layer dependencies
nucleotide-types = { workspace = true, features = ["gpui-bridge"] }
nucleotide-events.workspace = true
nucleotide-logging.workspace = true

# Helix dependencies
helix-core.workspace = true
helix-event.workspace = true
helix-term.workspace = true
helix-view.workspace = true
helix-lsp.workspace = true

# GPUI
gpui.workspace = true

# Common dependencies
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
which = "6.0"