[package]
name = "nucleotide-editor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false
description = "Text rendering and editing logic for Nucleotide editor (Layer 4)"
categories = ["text-editors", "gui"]
rust-version = "1.88"

[dependencies]

# GPUI
gpui = { workspace = true }

# Helix dependencies
helix-core = { workspace = true }
helix-stdx = { workspace = true }
helix-view = { workspace = true }

# Standard dependencies
nucleotide-logging = { workspace = true }

[dev-dependencies]
arc-swap.workspace = true
criterion = "0.8"
rand = "0.10"
tokio.workspace = true

[[bench]]
name = "line_layout_cache"
harness = false
