[package]
name = "nucleotide-env"
version = "0.1.0"
edition.workspace = true
description = "Shell environment management for Nucleotide editor"
license.workspace = true
repository = "https://github.com/iainh/nucleotide"

[dependencies]
nucleotide-logging.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time", "process"] }
tracing.workspace = true

[package.metadata.cargo-machete]
ignored = ["tracing"]

[dev-dependencies]
