[package]
name = "nucleotide-env"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Shell environment management for Nucleotide editor"
license.workspace = true
repository = "https://github.com/iainh/nucleotide"

[dependencies]
dirs.workspace = true
nucleotide-logging.workspace = true
nucleotide-process = { workspace = true, features = ["tokio"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time", "process"] }
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
which.workspace = true

[package.metadata.cargo-machete]
ignored = ["tracing"]

[dev-dependencies]
tempfile.workspace = true
