[package]
name = "nucleotide-events"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false
description = "Event system definitions for Nucleotide editor (Layer 2)"
categories = ["text-editors", "gui"]
rust-version = "1.88"

[dependencies]
# External dependencies
async-trait = "0.1"
tokio = { version = "1.0", features = ["sync"] }
thiserror = "2.0"
tracing = "0.1"
helix-view.workspace = true
helix-lsp.workspace = true
helix-core.workspace = true
helix-vcs.workspace = true
