[package]
name = "nucleotide-events"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false
description = "Event system definitions for Nucleotide editor (Layer 2)"
categories = ["text-editors", "gui"]
rust-version = "1.95"

[dependencies]
# External dependencies
tokio = { version = "1.0", features = ["sync"] }
thiserror.workspace = true
tracing.workspace = true
helix-view.workspace = true
helix-lsp.workspace = true
helix-core.workspace = true
helix-vcs.workspace = true
serde_json.workspace = true
