[package]
name = "nucleotide-logging"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false
description = "Centralized logging infrastructure for Nucleotide editor"
categories = ["text-editors", "development-tools"]
rust-version = "1.95"

[dependencies]
# Core tracing infrastructure
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

# Configuration and serialization
serde = { workspace = true, features = ["derive"] }

# Utilities
dirs.workspace = true
parking_lot.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true
tracing-mock = "0.1.0-beta.1"
