[package]
name = "nucleotide-lsp-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
publish = false

[dependencies]
tokio.workspace = true
nucleotide-process = { workspace = true, features = ["tokio"] }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
