[package]
name = "nucleotide-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false
description = "Language Server Protocol support for Nucleotide editor (Layer 5)"
categories = ["text-editors", "gui"]
rust-version.workspace = true

[dependencies]
# Internal crates
nucleotide-events.workspace = true
nucleotide-logging.workspace = true
nucleotide-types.workspace = true
nucleotide-workspace.workspace = true

# Helix dependencies
helix-core.workspace = true
helix-lsp.workspace = true
helix-view.workspace = true

# GPUI
gpui.workspace = true

# Common dependencies
tokio.workspace = true
futures.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rand.workspace = true
slotmap.workspace = true
which.workspace = true
chrono.workspace = true

[dev-dependencies]
