[package]
name = "nucleotide-process"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false
description = "Process spawning helpers for Nucleotide"
categories = ["text-editors", "gui"]
rust-version.workspace = true

[dependencies]
tokio = { workspace = true, optional = true, features = ["process"] }

[features]
default = []
tokio = ["dep:tokio"]
