[package]
name = "nucleotide-process"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false
description = "Process spawning helpers for Nucleotide"
categories = ["text-editors", "gui"]
rust-version.workspace = true

[dependencies]
tokio = { workspace = true, optional = true, features = ["process"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile.workspace = true

[features]
default = []
tokio = ["dep:tokio"]
