[package]
name = "nucleotide-project"
version = "0.1.0"
edition = "2021"
description = "Project detection and manifest provider system for Nucleotide"

[dependencies]
gpui = "0.1"
nucleotide-logging = { path = "../nucleotide-logging" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
regex = "1.0"
tokio = { version = "1.0", features = ["fs", "rt", "macros"] }

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"