[package]
name = "nucleotide-project"
version = "0.1.0"
edition.workspace = true
description = "Project detection and manifest provider system for Nucleotide"

[dependencies]
gpui.workspace = true
nucleotide-logging.workspace = true
nucleotide-lsp.workspace = true
nucleotide-ui.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
async-trait.workspace = true
regex.workspace = true
tokio = { workspace = true, features = ["fs", "rt", "macros"] }
parking_lot.workspace = true

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
