[package]
name = "nucleotide-remote"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false
description = "Remote workspace service for Nucleotide"
categories = ["text-editors", "gui"]
rust-version = "1.95"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
dirs.workspace = true
ignore.workspace = true
nucleotide-env.workspace = true
nucleotide-process = { workspace = true, features = ["tokio"] }
nucleotide-workspace.workspace = true
notify.workspace = true
prost.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
zstd.workspace = true
