[package]
name = "nucleotide-terminal-panel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false
description = "Terminal panel, tabs, and actions wiring for Nucleotide (Layer 5)"
categories = ["text-editors", "gui"]
rust-version.workspace = true

[dependencies]
nucleotide-events.workspace = true
gpui.workspace = true
nucleotide-terminal-view = { path = "../nucleotide-terminal-view" }
nucleotide-ui.workspace = true
