[package]
name = "nucleotide-terminal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false
description = "Terminal session and PTY management for Nucleotide (Layer 3)"
categories = ["text-editors", "gui"]
rust-version = "1.95"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
portable-pty = "0.9"
alacritty_terminal = { version = "0.25", optional = true }
which.workspace = true

[features]
default = []
emulator = ["alacritty_terminal"]
