[package]
name = "nucleotide-terminal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false
description = "Terminal session and PTY management for Nucleotide (Layer 3)"
categories = ["text-editors", "gui"]
rust-version = "1.95"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
portable-pty = "0.9"
libghostty-vt = { version = "0.2.0", default-features = false, optional = true }

[features]
default = []
emulator = ["dep:libghostty-vt"]
emulator-ghostty = ["emulator"]
