[package]
name = "nucleotide-types"
version = "0.1.0"
edition = "2021"

[dependencies]
# External dependencies only - no cross-crate dependencies
serde = { version = "1.0", features = ["derive"] }
gpui = { git = "https://github.com/zed-industries/zed", rev = "faa45c53d7754cfdd91d2f7edd3c786abc703ec7" }
helix-core = { git = "https://github.com/helix-editor/helix", tag = "25.07.1" }